impostazione botton in header

--- a/index.html
+++ b/index.html
@@ -49,16 +49,13 @@
                 <br>
                 Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
             </p>
-            <div>
-
+            <div class="flex flex-justify-align-center">
                 <button>
                     Scarica per Mac
                 </button>
-
                 <button>
                     Apri Discord nel tuo browser
                 </button>
-
             </div>
         </section>
     </header>
