creazione sfondo nero per il button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <button>
                     Scarica per Mac
                 </button>
-                <button>
+                <button class="bg-black text-white">
                     Apri Discord nel tuo browser
                 </button>
             </div>
