--- a/index.html
+++ b/index.html
@@ -143,9 +143,11 @@
                 <h3>
                     Pronto a iniziare la tua avventura?
                 </h3>
-                <button>
-                    Scarica per Mac
-                </button>
+                <div class="flex">
+                    <button>
+                        Scarica per Mac
+                    </button>
+                </div>
             </section>
         </div>
     </main>
@@ -270,7 +272,9 @@
         <!-- parte 2 -->
         <div class="flex justify-space-between">
             <img src="img/logo.svg" alt="logo-footer">
-            <button>Registrati</button>
+            <button class="bg-7289da text-white">
+                Registrati
+            </button>
         </div>
     </footer>
 </body>
