dimensionamento bottoni cambio titolo pagina

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>htmlcss-struttura-discord</title>
+    <title>htmlcss-discord</title>
 </head>
 <body>
     <header>
@@ -33,9 +33,11 @@
                     Assistenza
                 </li>
             </ul>
-            <button>
-                Accedi
-            </button>
+            <div class="flex flex-justify-align-center">
+                <button class="size-button">
+                    Accedi
+                </button>
+            </div>
         </div>
         <!-- parte inferiore header -->
         <section class="flex flex-column">
@@ -272,9 +274,11 @@
         <!-- parte 2 -->
         <div class="flex justify-space-between">
             <img src="img/logo.svg" alt="logo-footer">
-            <button class="bg-7289da text-white">
-                Registrati
-            </button>
+            <span class="flex flex-justify-align-center">
+                <button class="bg-7289da text-white size-button-footer">
+                    Registrati
+                </button>
+            </span>
         </div>
     </footer>
 </body>
