creazione classe padding-button-footer

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </div>
         <hr>
         <!-- parte 2 -->
-        <div class="flex justify-space-between">
+        <div class="flex justify-space-between padding-button-footer">
             <img src="img/logo.svg" alt="logo-footer">
             <span class="flex flex-justify-align-center">
                 <button class="bg-7289da text-white size-button-footer">
