--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <h3>
                     Pronto a iniziare la tua avventura?
                 </h3>
-                <div class="flex">
+                <div class="flex flex-justify-align-center">
                     <button>
                         Scarica per Mac
                     </button>
@@ -159,15 +159,22 @@
             <!-- colonna 1 -->
             <section>
                 <h2>
-                    Il tuo posto per parlare
+                    Il tuo posto per
+                    <br>
+                    parlare
                 </h2>
-                <img src="img/ita.png" alt="ita-flag">
-                <span>
-                    Italiano
-                </span>
-                <i class="fa-solid fa-chevron-down"></i>
-                <div id="icone-social">
-                    <i>e</i><i>e</i><i>e</i><i>e</i>
+                <div>
+                    <img src="img/ita.png" alt="ita-flag" id="ita-flag-footer">
+                    <span>
+                        Italiano
+                    </span>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
+                <div class="flex justify-space-between" id="icone-social">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
                 </div>
             </section>
             <!-- colonna 2 -->
