distanze nella colonna 1 del footer

--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
         <div class="flex justify-space-between">
             <!-- colonna 1 -->
             <section>
-                <h2>
+                <h2 class="padding-bottom-1rem">
                     Il tuo posto per
                     <br>
                     parlare
                 </h2>
-                <div>
+                <div class="padding-bottom-1rem">
                     <img src="img/ita.png" alt="ita-flag" id="ita-flag-footer">
                     <span>
                         Italiano
