inpostazione classe bg-star per la scritta pronto a iniziare la tua avventura

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                     gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
                 </p>
                 <img src="img/item4-big.svg" alt="item4-big">
+                <div class="bg-star"></div>
                 <h3>
                     Pronto a iniziare la tua avventura?
                 </h3>
