inserimento freccia nell bottone scarica per Mac

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             </p>
             <div class="flex flex-justify-align-center">
                 <button>
+                    <i class="fa-solid fa-down-long"></i>
+                    &nbsp;
                     Scarica per Mac
                 </button>
                 <button class="bg-black text-white">
@@ -147,7 +149,9 @@
                     Pronto a iniziare la tua avventura?
                 </h3>
                 <div class="flex flex-justify-align-center">
-                    <button>
+                    <button class="bg-7289da text-white">
+                        <i class="fa-solid fa-down-long"></i>
+                        &nbsp;
                         Scarica per Mac
                     </button>
                 </div>
