impostazione margin e padding e inserimento background nel header

--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
                 Il tuo posto per parlare
             </h1>
             <p>
-                Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale,
-                <br>
-                o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,
-                <br>
+                Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica
+            </p>
+            <p>
+                mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,
+            </p>
+            <p>
                 Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
             </p>
             <div class="flex flex-justify-align-center">
