padding bottone nel main e padding e font size dei p e h2 nel main

--- a/index.html
+++ b/index.html
@@ -82,12 +82,15 @@
                     parlare
                 </h2>
                 <p>
-                    I server Discord sono organizzati in canali
-                    <br>
+                    I server Discord sono organizzati in canali   
+                </p>
+                <p>
                     tematici in cui puoi collaborare, condividere o
-                    <br>
+                </p>
+                <p>
                     semplicemente parlare della tua giornata
-                    <br>
+                </p>
+                <p>
                     senza intasare una chat di gruppo.
                 </p>
             </section>
@@ -96,17 +99,20 @@
         <div class="flex bg-gray padding-10rem flex-justify-align-center">
             <section>
                 <h2>
-                    Dove trovardi è
+                    Dove trovarsi è
                     <br>
                     facile
                 </h2>
                 <p>
-                    Mettiti comodo in um canale vocale quando
-                    <br>
+                    Mettiti comodo in um canale vocale quando    
+                </p>
+                <p>
                     hai tempo. Gli amici nel tuo server possono
-                    <br>
+                </p>
+                <p>
                     vedere che sei lì e unirsi istantaneamente
-                    <br>
+                </p>
+                <p>
                     senza dover chiamare.
                 </p>
             </section>
@@ -123,26 +129,31 @@
                 </h2>
                 <p>
                     Dai inizio a una community di qualsiasi
-                    <br>
+                </p>
+                <p>
                     dimensionecon strumenti di moderazione e
-                    <br>
+                </p>
+                <p>
                     accesso ai membri personalizzabile.
-                    <br>
+                </p>
+                <p>
                     Concedi ai membri poteri speciali, crea
-                    <br>
+                </p>
+                <p>
                     canali privati, e molto altro.
                 </p>
             </section>
         </div>
         <!-- parte 4 -->
-        <div class="bg-gray padding-10rem text-center">
+        <div class="bg-gray padding-10rem text-center padding-7rem">
             <section>
                 <h2>
                     Tecnologia affidabile per tenersi in contatto
                 </h2>
                 <p>
-                    Video e audio a bassa latenza ti farenno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda
-                    <br>
+                    Video e audio a bassa latenza ti farenno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda   
+                </p>
+                <p>
                     gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
                 </p>
                 <img src="img/item4-big.svg" alt="item4-big">
@@ -151,7 +162,7 @@
                     Pronto a iniziare la tua avventura?
                 </h3>
                 <div class="flex flex-justify-align-center">
-                    <button class="bg-7289da text-white">
+                    <button class="bg-7289da text-white padding-02rem">
                         <i class="fa-solid fa-down-long"></i>
                         &nbsp;
                         Scarica per Mac
