correzione div con classe bg-star

--- a/index.html
+++ b/index.html
@@ -156,11 +156,12 @@
                 <p>
                     gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
                 </p>
-                <img src="img/item4-big.svg" alt="item4-big">
-                <div class="bg-star"></div>
-                <h3>
-                    Pronto a iniziare la tua avventura?
-                </h3>
+                <img src="img/item4-big.svg" alt="item4-big margin-bottom-6rem">
+                <div class="bg-star">
+                    <h3>
+                        Pronto a iniziare la tua avventura?
+                    </h3>
+                </div>
                 <div class="flex flex-justify-align-center">
                     <button class="bg-7289da text-white padding-02rem">
                         <i class="fa-solid fa-down-long"></i>
